--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -50,7 +50,7 @@
         android:id="@+id/textViewLabelStreet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Описание: "
+        android:text="Адрес: "
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@android:color/holo_red_light"
